syntax = "proto3";

//option java_multiple_files = true;
option java_package="org.example.reservationservice.grpc";
option java_outer_classname = "ReservationServiceProto";

service ReservationService {
  rpc CreateReservation (CreateReservationRequest) returns (MessageResponse);
  rpc UpdateReservation (UpdateReservationRequest) returns (MessageResponse);
  rpc DeleteReservation (DeleteReservationRequest) returns (MessageResponse);
  rpc GetReservationById (ReservationByIdRequest) returns (ReservationResponse);
  rpc GetReservationByUserId (ReservationByUserIdRequest) returns (ReservationResponse);
  rpc GetReservationByChambreId (ReservationByChambreIdRequest) returns (ReservationResponse);
  rpc GetReservationByDate_Debut (ReservationByDate_DebutRequest) returns (ReservationsResponse);
  rpc GetAllReservations (Empty) returns (ReservationsResponse);
}

message CreateReservationRequest {
  int64 userId = 1;
  int64 chambreId = 2;
  string date_debut = 3;
  string date_fin = 4;
}

message UpdateReservationRequest {
  int64 id = 1;
  int64 userId = 2;
  int64 chambreId = 3;
  string date_debut = 4;
  string date_fin = 5;
  double montant_total = 6;
}

message DeleteReservationRequest {
  int64 id = 1;
}

message ReservationResponse {
  int64 id = 1;
  int64 userId = 2;
  int64 chambreId = 3;
  string date_debut = 4;
  string date_fin = 5;
  double montant_total = 6;
  User user = 7;
  Chambre chambre = 8;

}

message ReservationsResponse {
  repeated ReservationResponse reservations = 1;
}

message ReservationByIdRequest {
  int64 id = 1;
}

message ReservationByUserIdRequest {
  int64 userId = 2;
}

message ReservationByChambreIdRequest {
  int64 chambreId = 3;
}

message ReservationByDate_DebutRequest {
  string date = 4;
}

message MessageResponse {
  string message = 1;
}

message Empty {}

message User {
  string nom = 1;
  string prenom = 2;
  string email = 3;
  string telephone =4;
  string adresse = 5;
  string cni = 6;
}

message Chambre {
  string numero = 1;
  int64 nombre_lits = 2;
  float prix = 3;
  string image = 4;
  string description = 5;
  bool disponible = 6;
}

